added some instructions on start screen

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
 <canvas id="gameCanvas"></canvas>
 <div id="speedDisplay">Vertical Speed: 0</div>
-<div id="startOverlay">Click to Start</div>
+<div id="startOverlay">Click to Start<br>Press Space to use Thrust</div>
 <div id="gameOverOverlay">Game Over<br>Click to Restart</div>
 <div id="youWinOverlay">You Win!<br>Click to Restart</div>
 
